[package]
edition = "2018"
name = "wgpu-sandbox"
resolver = "2"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = "0.18"
env_logger = "0.9"
image = "0.23"
log = "0.4"
pollster = "0.2"
wgpu = "0.11"
winit = "0.25"
